[package]
name = "enc_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11.11", features = ["json"] }
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full"] }
